<resources>
    <string name="app_name">Flexpad</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="register">register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Name</string>
    <string name="login">login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">hello</string>
    <string name="type_a_message">Type a message…</string>
    <string name="profile">Profile</string>
    <string name="search">🔍 Search…</string>
    <string name="login_sign_in">Login (Sign In)</string>
    <string name="online">online</string>
    <string name="gamess_and_stuff">Games and Stuff</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="fake">Fake</string>
    <string name="fact">Fact</string>
    <string name="zebra_stripes_act_as_natural_insect_repellent">Zebra stripes act as natural insect repellent</string>
    <string name="score">Score:</string>
    <string name="you_have_scored_138_out_of_138">You have scored 138 out of 138</string>
    <string name="congratulations">Congratulations</string>
    <string name="retry_quiz">Retry Quiz</string>
    <string name="exit">Exit</string>
    <string name="games_and_fun">Games and Fun</string>
    <string name="games_and_stuf">Games and Stuff</string>
    <string name="logout">Logout</string>
    <string name="feedback">FEEDBACK</string>
    <string name="type_feedback_here">Type feedback here..</string>
    <string name="send">Send</string>
    <string name="view">View</string>
    <string name="what_do_you_like_about_this_app_nwhat_don_t_you_like_nwhat_do_you_want">What do you like about this app?\nWhat don\'t you like?\nWhat feature would you like to have?</string>
    <string name="flexpad">Flexpad</string>
    <string name="contacts">Contacts</string>
    <string name="phone">Phone</string>
    <string name="group_payment">Group Payment</string>
    <string name="privacy_policy">"On Privacy:\nFlexpad only gets access to your contacts and Google© Account information, to provide a better experience. Note that we request permission to access your contacts so you can see those who have also signed up and we can notify those with attached email addresses (if any) to encourage them to join too. Flexpad does not directly track your activity across other apps. \n\nPlease share this app with your friends now with the button below.⬇️👇🏾\nThank you!😊"</string>
    <string name="add_money">Add Money To Wallet</string>
    <string name="send_money">Send Money With Friends</string>
    <string name="request_money">Request Money</string>
    <string name="show_original_message">Show Original Message</string>
    <string name="copy">Copy</string>
    <string name="translate_message">Translate Message</string>
    <string name="delete_message">Delete Message</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="room_name_hint">Room Name (32 characters max, only alphabets and numbers allowed):</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="mine">Mine</string>
    <string name="delete_room">Delete Room</string>
    <string name="followers_number">Followers:</string>
    <string name="following_number">Following:</string>
    <string name="already_have_an_account">Already have an account? Login Here:</string>
    <string name="onboarding_text">Ready for some audio-streaming?\nAfter register/login, click \'➕\' to create room, or click any room name to pop in and listen, and \'🎙️\' to record.</string>
    <string name="followerssssssss">Followers</string>
    <string name="followingsssssss">Following</string>
    <string name="room_name_hints">e.g, ManuLIV, Trump, ASUU, BBNaija</string>
    <string name="create_ruum">Create</string>

</resources>
