<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/flexpad"
        android:textColor="#fff"
        android:textSize="66sp"
        android:textStyle="bold"
        android:fontFamily="casual" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/white_duolingable"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:text="@string/login" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_duolingable"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:text="@string/register" />


</LinearLayout>