<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">


    <TextView
        android:id="@+id/grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/outOf"
        android:layout_margin="16dp"
        android:fontFamily="casual"
        android:padding="16dp"
        android:text="@string/congratulations"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/outOf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/retry"
        android:layout_margin="16dp"
        android:fontFamily="casual"
        android:padding="16dp"
        android:text="@string/you_have_scored_138_out_of_138"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="4dp"
        android:background="@drawable/ripple_effect"
        android:fontFamily="casual"
        android:padding="8dp"
        android:text="@string/retry_quiz"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>