<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuizActivity">

    <RelativeLayout
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:fontFamily="casual"
            android:padding="16dp"
            android:text="@string/score"
            android:textColor="#000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:fontFamily="casual"
            android:padding="16dp"
            android:text="0"
            android:textColor="#000"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/imag_40" />

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_alignStart="@+id/imageView"
            android:layout_alignEnd="@+id/imageView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:text="@string/zebra_stripes_act_as_natural_insect_repellent"
            android:textColor="#fff"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:fontFamily="casual"
            android:background="#2196F3"
            android:textColor="#fff"
            android:id="@+id/trueButton"
            android:text="@string/fact"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:fontFamily="casual"
            android:background="#F44336"
            android:textColor="#fff"
            android:id="@+id/falseButton"
            android:text="@string/fake"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>




</LinearLayout>