<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".PaymentActivity"
android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/MenuStyle">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_duolingable"
        android:layout_marginTop="100dp"
        android:textColor="#fff"
        android:textSize="16sp" />

    <Button
        android:id="@+id/add_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/orange_duolingable"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:paddingTop="8dp"
        android:paddingBottom="10dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:text="@string/add_money"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="#fff"
        android:textSize="18sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_duolingable"
        android:textColor="#fff"
        android:textSize="16sp" />

    <Button
        android:id="@+id/send_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/orange_duolingable"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:paddingTop="8dp"
        android:paddingBottom="10dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:text="@string/send_money"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="#fff"
        android:textSize="18sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_duolingable"
        android:textColor="#fff"
        android:textSize="16sp" />

    <Button
        android:id="@+id/request_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/orange_duolingable"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:paddingTop="8dp"
        android:paddingBottom="10dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:text="@string/request_money"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="#fff"
        android:textSize="18sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_duolingable"
        android:textColor="#fff"
        android:textSize="16sp" />

</LinearLayout>

